Corrected spacing on home page

--- a/src/_includes/css/main.css
+++ b/src/_includes/css/main.css
@@ -329,6 +329,10 @@ nav a[aria-current="page"] {
   margin-inline: auto;
 }
 
+.card lite-youtube {
+  margin-block-end: var(--space-xs);
+}
+
 /* === Project image link hover === */
 .image-link:hover,
 .image-link:focus {
